MAJ contenu des projets (à finir)

--- a/index.html
+++ b/index.html
@@ -85,66 +85,64 @@
 
     <div id="competences" class="competences">
         <h1>&#60; Compétences /&#62; </h1>
-        <p>Langages ou logiciels ?</p> 
 
         <div class="competences_content">
             <div class="competence">
                 <div class="skill_img">
-                    <img src="annexes/icon_android.png">
+                    <img src="annexes/icons/icon_kotlin.png">
                 </div>
-                <p>Android</p>
+                <p>Kotlin</p>
             </div>
 
             <div class="competence">
                 <div class="skill_img">
-                    <img src="annexes/icon_swift.png">
-                </div>
-                <p>iOS</p>
-            </div>
-
-            <div class="competence">
-                <div class="skill_img">
-                    <img src="annexes/icon_flutter.png">
-                </div>
-                <p>Flutter</p>
-            </div>
-
-            <div class="competence">
-                <div class="skill_img">
-                    <img src="annexes/icon_html.png">
-                    <img src="annexes/icon_css.png">
-                </div>
-                <p>HTML & CSS</p>
-            </div>
-
-            <div class="competence">
-                <div class="skill_img">
-                    <img src="annexes/icon_javascript.png">
-                </div>
-                <p>JavaScript</p>
-            </div>
-
-            <div class="competence">
-                <div class="skill_img">
-                    <img src="annexes/icon_php.png">
-                </div>
-                <p>PHP</p>
-            </div>
-
-            <div class="competence">
-                <div class="skill_img">
-                    <img src="annexes/icon_java.png">
+                    <img src="annexes/icons/icon_java.png">
                 </div>
                 <p>Java</p>
             </div>
 
             <div class="competence">
                 <div class="skill_img">
-                    <img src="annexes/icon_github_desktop.png">
+                    <img src="annexes/icons/icon_swift.png">
+                </div>
+                <p>Swift</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icons/icon_dart.png">
+                </div>
+                <p>Dart (Flutter)</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icons/icon_html.png">
+                    <img src="annexes/icons/icon_css.png">
+                </div>
+                <p>HTML & CSS</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icons/icon_php.png">
+                </div>
+                <p>PHP</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icons/icon_javascript.png">
+                </div>
+                <p>JavaScript</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icons/icon_github_desktop.png">
                 </div>
                 <p>GitHub</p>
             </div>
-            
         </div>
     </div>
 
@@ -156,7 +154,7 @@
             <div class="project">
                 <a href="stage_neolink.html">
                     <div class="project_img">
-                        <img src="annexes/icon_neolink.png">
+                        <img src="annexes/icons/icon_neolink.png">
                     </div>
                     <p>Stage Néolink</p>
                 </a>
@@ -165,7 +163,7 @@
             <div class="project">
                 <a href="stage_cnrs.html">
                     <div class="project_img">
-                        <img src="annexes/icon_cnrs.png">
+                        <img src="annexes/icons/icon_cnrs.png">
                     </div>
                     <p>Stage CNRS</p>
                 </a>
@@ -174,7 +172,7 @@
             <div class="project">
                 <a href="motherload.html">
                     <div class="project_img">
-                        <img src="annexes/icon_motherload.png">
+                        <img src="annexes/icons/icon_motherload.png">
                     </div>
                     <p>Motherload</p>
                 </a>
@@ -183,7 +181,7 @@
             <div class="project">
                 <a href="jpo_orleans.html">
                     <div class="project_img">
-                        <img src="annexes/icon_jpo.jpg">
+                        <img src="annexes/icons/icon_jpo.jpg">
                     </div>
                     <p>JPO Orléans</p>
                 </a>
@@ -192,7 +190,7 @@
             <div class="project">
                 <a href="todolist.html">
                     <div class="project_img">
-                        <img src="annexes/icon_todolist.png">
+                        <img src="annexes/icons/icon_todolist.png">
                     </div>
                     <p>ToDoList</p>
                 </a>
@@ -201,7 +199,7 @@
             <div class="project">
                 <a href="petit_ou_grand.html">
                     <div class="project_img">
-                        <img src="annexes/icon_petitougrand.png">
+                        <img src="annexes/icons/icon_petitougrand.png">
                     </div>
                     <p>Petit ou Grand</p>
                 </a>
@@ -210,7 +208,7 @@
             <div class="project">
                 <a href="cookie_clicker.html">
                     <div class="project_img">
-                        <img src="annexes/icon_cookie.png">
+                        <img src="annexes/icons/icon_cookie.png">
                     </div>
                     <p>Cookie Clicker</p>
                 </a>
@@ -219,7 +217,7 @@
             <div class="project">
                 <a href="tictactoe.html">
                     <div class="project_img">
-                        <img src="annexes/icon_tictactoe.png">
+                        <img src="annexes/icons/icon_tictactoe.png">
                     </div>
                     <p>TicTacToe</p>
                 </a>
