--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -48,7 +48,13 @@
             </div>
             <div class="project_content_text">
                 <p>
-                    Stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT. Réalisations d'éléments de communication pour lancer le projet ARD MATEX porté par la région CVL
+                    J'ai eu l'occasion d'effectuer un stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT MMI (Métiers du Multimédia et de l'Internet).
+                    Les missions qui m'ont été confiées sont les suivantes :
+                    <ul>
+                        <li>Création d'une charte graphique et d'un logo</li>
+                        <li>Création de visuels (roll-up, dépliant, stand parapluie)</li>
+                    </ul>
+                    Réalisations d'éléments de communication pour lancer le projet ARD MATEX porté par la région CVL
                     Ce stage de fin de DUT constitue ma première expérience professionnelle dans le domaine de la communication.
                 </p>
                 <p>
