ADD content + FIX footer + DELETE contacts

--- a/integration_web_bootstrap.html
+++ b/integration_web_bootstrap.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,7 +35,6 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
@@ -60,8 +58,16 @@
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
