--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,12 +35,11 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Application Mobile : JPO Orléans /&#62; </h1>
+        <h1>&#60; JPO Orléans /&#62; </h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
@@ -52,24 +50,47 @@
                     </div>
                 </div>
             </div>
-            <div class="project_content_text">
-                <p>projet de groupe de 4 étudiants, flutter</p>
-                <p>objectif : créer l'app avec flutter</p>
-                <p>ancienne app en angular et je sais plus</p>
-                <p>nous avions à notre disposition les maquettes de l'ancienne app pour nous donner une idée et le JSON qui contient les données de chaque composante</p>
-                <p>nous avons créé les maquettes sur figma puis nous avons développé chacun au moins 1 ou plusieurs pages et les fonctionnalités</p>
-                <ul>
-                    <li>Envoi de notifs</li>
-                    <li>Itinéraire</li>
-                    <li>Ajouter/retirer un évent des favoris...</li>
-                </ul>
-                <p>Mettre le rapport ??</p>
+            <div class="project_content_smartphone_text">
+                <h2>Contexte</h2>
+                <p>
+                    Ce projet a été réalisé lors de ma 1<sup>re</sup> année de Master Informatique dans le module des projets TER.
+                    Il nous a été demandé de réaliser une application de planification d'événements pour les Journées Portes ouvertes.
+                    <br>
+                    Les fonctionnalités attendues sont la gestion des horaires des présentations, la
+                    localisation des stands, des notifications pour les visiteurs sur les événements à venir et un 
+                    système de cartographie pour faciliter la navigation dans le lieu de l'événement. Les visiteurs 
+                    peuvent ainsi personnaliser leur itinéraire et recevoir des alertes en temps réel pour ne rien manquer.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Pour ce projet, nous avons fait le choix d'utiliser le framework Flutter afin de développer une application à la fois compatible sur Android et iOS à partir d'une seule base de code.
+                    <br>
+                    Nous avions à notre disposition les maquettes de l'ancienne application (réalisée avec Angular et Ionic) ainsi que le fichier qui contenait toutes les données de l'année passée (événements, horaires, lieux...) en format JSON.
+                    <br>
+                    A partir de ces informations, nous avons pu créer des maquettes sur Figma et ainsi développer une interface intuitive et ergonomique.
+                </p>
+
+                <h2>Bilan</h2>
+                <p>
+                    Ce projet a permis à notre équipe d'acquérir une compréhension approfondie du framework Flutter et de son fonctionnement pour le développement d'applications mobiles.
+                    Celà nous a aussi permi de renforcer notre capacité à travailler en équipe et à communiquer efficacement, des compétences essentielles dans le milieu professionnel.
+                    Nous avons également appris à gérer les imprévus, en adaptant notre planning et nos méthodes de travail pour respecter les délais imposés.
+                </p>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
