--- a/petit_ou_grand.html
+++ b/petit_ou_grand.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,12 +35,11 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Application Mobile : Petit ou Grand /&#62; </h1>
+        <h1>&#60; Petit ou Grand /&#62; </h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
@@ -52,17 +50,42 @@
                     </div>
                 </div>
             </div>
-            <div class="project_content_text">
-                <p>projet au cours de l'année de M1, android et opengl...</p>
-                <p>objectif : créer un jeu en java</p>
-                <p>les règles sont intégrées dans l'app</p>
-                <p>les boutons et les cartes ont été faits en opengl</p>
+            <div class="project_content_smartphone_text">
+                <h2>Contexte</h2>
+                <p>
+                    Ce projet a été réalisé durant ma 1<sup>re</sup> année de Master Informatique dans le cadre du cours de Programmation Graphique.
+                Le projet consistait à réaliser un jeu en sur mobile en utilisant le langage Java et OpenGL ES.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Le jeu se basse sur un système de pari entre deux joueurs.
+                    Chaque joueur doit deviner si la carte qu'il va retourner de sa pile est plus grande, plus petite ou égale à la dernière carte retournée.
+                    S'il devine correctement alors il peut continuer à jouer
+                    Le premier joueur qui arriver à vider sa pile de cartes à deviner gagne.
+                    Les boutons pour parier ainsi que les cartes ont été développés en OpenGL.
+                </p>
+
+                <h2>Bilan</h2>
+                <p>
+                    ...
+                </p>
             </div>
         </div>
     </div>
 
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
+
 </body>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+
 
 </html>
