--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,7 +35,6 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
@@ -47,32 +45,50 @@
                 <img src="annexes/MATEX_Roll_Up.png" draggable="false">
             </div>
             <div class="project_content_text">
+                <h2>Contexte</h2>
                 <p>
                     J'ai eu l'occasion d'effectuer un stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT MMI (Métiers du Multimédia et de l'Internet).
-                    Les missions qui m'ont été confiées sont les suivantes :
-                    <ul>
-                        <li>Création d'une charte graphique et d'un logo</li>
-                        <li>Création de visuels (roll-up, dépliant, stand parapluie)</li>
-                    </ul>
-                    Réalisations d'éléments de communication pour lancer le projet ARD MATEX porté par la région CVL
-                    Ce stage de fin de DUT constitue ma première expérience professionnelle dans le domaine de la communication.
+                    Ce stage visait à promouvoir le projet scientifique MATEX (<strong>M</strong>ultim<strong>AT</strong>ériaux en conditions <strong>EX</strong>trême) qui réunit plusieurs acteurs présents dans la région Centre-Val de Loire et porté par cette dernière.
+                    <br>
+                    Cependant, comme il y avait de nombreux acteurs impliqués, il fallait alors instaurer une identité visuelle propre au projet MATEX et créer des visuels pour lancer la communication autour du projet.
+                    Ces visuels auraient pour but de donner des informations complémentaires lors des conférences et réunions autour du projet.
                 </p>
+
+                <h2>Objectifs</h2>
                 <p>
-                    La diversité des missions qui m’ont été confiées a mis en exergue les
-                    compétences polyvalentes de ma formation de DUT MMI.
-                    Cette immersion de douze semaines a été très enrichissante car j’ai pu lancer le
-                    projet MATEX en autonomie sans être retenu par des contraintes graphiques ou
-                    éditoriales.
+                    Je me suis alors vu confier la tâche de créer la charte graphique (couleurs, typographies) ainsi que la création du logo MATEX.
+                    <br>
+                    J'ai aussi pu créer de nombreux visuels comme un roll-up, des dépliants et un stand parapluie en utilisant les logiciels de la suite Adobe sur lesquels j'ai été formé lors de mes études (Illustrator, InDesign).
+                    <br>
+                    Après mon départ, j'ai laissé mon travail entre les mains de l'infographiste (donner le nom?) qui a ensuite pu reprendre la charte graphique que j'ai créé pour créer de futurs visuels.
                 </p>
+                
+                <h2>Bilan</h2>
+                <p>
+                    La diversité des missions qui m'ont été confiées a mis en exergue les
+                    compétences polyvalentes de ma formation de DUT MMI.
+                    Cette immersion de douze semaines a été très enrichissante car j'ai pu lancer le
+                    projet MATEX en autonomie sans être retenu par des contraintes graphiques ou
+                    éditoriales. Ce stage de fin de DUT dans le domaine de la communication a constitué ma première expérience professionnelle.
+                </p>
+
                 <div class="download_btn">
-                    <a href="annexes/rapport_cnrs.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                    <a href="annexes/rapport_cnrs.pdf" target="_blank"><span><strong>rapport de stage</strong></span></a>
                 </div>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
