--- a/stage_neolink.html
+++ b/stage_neolink.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,7 +35,6 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
@@ -45,18 +43,48 @@
         <div class="project_content_container">
             <img class="project_content_img" src="annexes/neolink_logo.png" draggable="false">
             <div class="project_content_text">
-                <p>Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique</p>
-                <p>Stage de 12 semaines au sein de Néolink dans le cadre de ma Licence informatique.</p>
-                <p>Prise en charge de tickets de maintenance en PHP sur le framework de Néolink : Phuton</p>
+                <h2>Contexte</h2>
+                <p>
+                    J'ai eu l'occasion d'effectuer un stage de 12 semaines au sein de l'entreprise Néolink dans le cadre de ma Licence Informatique.
+                    <br>
+                    Néolink est une entreprise qui développe des plateformes web destinées aux différents départements de France.
+                    Ces solutions web ont pour but de faciliter l'embauche et la réinsertion en milieu profesionnel aux allocataires du RSA.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Durant mon stage, je me suis occupé de la maintenance de différentes plateformes.
+                    Généralement, il fallait résoudre des problèmes trouvés par l'équipe de testeurs mais il m'arrivait aussi de développer des fonctionnalités souhaitées directement par le client.
+                    Lors de ce stage, j'ai travaillé avec les technologies du Web (HTML, CSS, PHP, SQL) sur le framework de Néolink : Phuton.
+                    <br>
+                    J'ai aussi pu travailler avec d'autres stagiaires, ce qui nous a permis de mieux comprendre certains problèmes et de les régler plus efficacement ensemble.
+                </p>
+
+                <h2>Bilan</h2>
+                <p>
+                    Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique et du développement web.
+                    <br>
+                    Travailler au sein d'une entreprise d'informatique comme Néolink m'a aussi permi de découvrir et d'échanger avec plusieurs types de développeurs (front-end, back-end et mobile).
+                    <br>
+                    Durant mes études j'ai été habitué à développer mais cette expérience en milieu professionnel m'a permis de comprendre l'importance et la charge de travail que représente la maintenance d'un projet.
+                </p>
                 <div class="download_btn">
-                    <a href="annexes/rapport_neolink.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                    <a href="annexes/rapport_neolink.pdf" target="_blank"><span><strong>rapport de stage</strong></span></a>
                 </div>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
