--- a/tictactoe.html
+++ b/tictactoe.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,12 +35,11 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Application Mobile : TicTacToe /&#62; </h1>
+        <h1>&#60; TicTacToe /&#62; </h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
@@ -52,14 +50,36 @@
                     </div>
                 </div>
             </div>
-            <div class="project_content_text">
-                <p>J'ai réalisé ce projet autonomie sur mon temps libre</p>
+            <div class="project_content_smartphone_text">
+                <h2>Contexte</h2>
+                <p>
+                    J'ai réalisé ce projet sur mon temps libre.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Mettre en place le jeu du morpion sur téléphone Android.
+                    Algo vu en IA (min-max)
+                </p>
+
+                <h2>Bilan</h2>
+                <p>
+                    ...
+                </p>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
