--- a/todolist.html
+++ b/todolist.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,12 +35,11 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Application Mobile : ToDoList /&#62; </h1>
+        <h1>&#60; ToDoList /&#62; </h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
@@ -52,14 +50,44 @@
                     </div>
                 </div>
             </div>
-            <div class="project_content_text">
-                <p>projet au cours de l'année de M1, flutter...</p>
+            <div class="project_content_smartphone_text">
+                <h2>Contexte</h2>
+                <p>
+                    Ce projet a été réalisé durant ma 1<sup>re</sup> année de Master Informatique dans le cadre du cours de Développement Multiplateforme.
+                    Le projet consistait à réaliser une ToDoList (liste de tâches à faire) en utilisant le framework vu en cours : Flutter.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Chaque tâche est identifiée à l'aide d'un titre.
+
+                    L'application devait permettre à l'utilisateur de rentrer un intitulé de tâche. 
+                    Il a aussi la possibilité de choisir une date, ajouter une description et un lieu.
+                    Il fallait aussi prévoir la modification et la suppression de la tâche.
+                    Chaque tâche peut être définie comme prioritaire.
+                    Supprimer la tâche par glissement ou en cliquant sur le bouton
+                    Adresse = météo mais aussi carte
+                    Il est aussi possible de trier les tâches selon leur importance (prioritaire ou non), la date d'échéance de la tâche ou la date de création de la tâche.
+                    Dans les contraintes du projet, il était aussi demandé d'afficher la météo liée au lieu entré par l'utilisateur à l'aide d'une API : OpenWeatherMap.
+                    L'utilisateur peut aussi choisir s'il veut ou non afficher les tâches terminées
+                </p>
+
+                <h2>Bilan</h2>
+                <p>Ce projet nous a permis de nous familiariser avec le framework Flutter.</p>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
