--- a/cookie_clicker.html
+++ b/cookie_clicker.html
@@ -19,7 +19,6 @@
         <a href="index.html#presentation">Présentation</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#projects">Mes Projets</a>
-        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -36,12 +35,11 @@
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
             <a class="menu" href="index.html#projects">Mes Projets</a>
-            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Application Mobile : Cookie Clicker /&#62; </h1>
+        <h1>&#60; Cookie Clicker /&#62; </h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
@@ -52,15 +50,42 @@
                     </div>
                 </div>
             </div>
-            <div class="project_content_text">
-                <p>J'ai réalisé ce projet en binôme au cours de mon année de Licence Informatique dans le cadre d'un cours de Programmation Mobile.</p>
+            <div class="project_content_smartphone_text">
+                <h2>Contexte</h2>
+                <p>
+                    J'ai réalisé ce projet au cours de mon année de Licence Informatique dans le cadre d'un cours de Programmation Mobile.
+                    Il n'y avait pas de sujet imposé. Toutefois, il fallait intégrer certaines choses dans notre application comme le stockage des informations dans une base de données locale (intégrée dans le téléphone, sans passer par internet), les capteurs du téléphone
+                    Il fallait aussi prévoir un mode connecté et un mode non connecté.
+                </p>
+
+                <h2>Objectifs</h2>
+                <p>
+                    Pour ce projet, nous avons fait le choix de reprendre le jeu web "Cookie Clicker". Le principe est assez simple. Il suffit de taper sur un cookie pour obtenir encore plus de cookies.
+                    L'objectif final étant d'avoir plus de cookies que les autres joueurs.
+                    Développement d'une application mobile Android avec le langage de programmation Java.
+                </p>
+
+                <h2>Bilan</h2>
+                <p>
+                    Ce projet a consitué mon premier projet mobile. Suite à ce projet, je me suis découvert une attirance pour le domaine du développement d'applications mobiles.
+                </p>
+
+                
                 <p>Plusieurs contraintes ont été imposées par l'enseignant (internationalisation, utilisation de fragments, utilisation d'un service, mode d'affichage en portrait et en paysage...).</p>
             </div>
         </div>
     </div>
 
-</body>
+    <footer>
+        <div class="copyright">
+            CORENTIN RIO &copy; <span class="year"></span>
+        </div>
+        <div class="contacts">
+            <a class="contact_icon" href="mailto:corentin.rio41@gmail.com"><img src="annexes/email.png" draggable="false"></a>
+            <a class="contact_icon" href="https://www.linkedin.com/in/corentin-rio-a7603b227/" target="_blank"><img src="annexes/linkedin.png" draggable="false"></a>
+        </div>
+    </footer>
 
-<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+</body>
 
 </html>
