--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <div id="presentation" class="presentation">
-        <h1>&#60; Présentation /&#62; </h1>
+        <h1>Présentation</h1>
         <div class="presentation_content">
             <div class="slideElementFromLeft">
                 <img class="avatar" src="annexes/avatar.png" draggable="false">
@@ -85,7 +85,7 @@
     
 
     <div id="competences" class="competences">
-        <h1>&#60; Compétences /&#62; </h1>
+        <h1>Compétences</h1>
 
         <div class="competences_content slideElementFromLeft">
             <div class="competence">
@@ -149,7 +149,7 @@
 
 
     <div id="projects" class="projects">
-        <h1>&#60; Mes Projets /&#62; </h1>
+        <h1>Mes Projets</h1>
 
         <div class="competences_content slideElementFromRight">
             <a class="project" href="stage_neolink.html">
