--- a/petit_ou_grand.html
+++ b/petit_ou_grand.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Petit ou Grand /&#62; </h1>
+        <h1>Petit ou Grand</h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
