--- a/cookie_clicker.html
+++ b/cookie_clicker.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Cookie Clicker /&#62; </h1>
+        <h1>Cookie Clicker</h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
