--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; JPO Orléans /&#62; </h1>
+        <h1>JPO Orléans</h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
