--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Stage CNRS /&#62; </h1>
+        <h1>Stage CNRS</h1>
         <div class="project_content_container">
             <div class="project_content_img">
                 <img src="annexes/MATEX_Roll_Up.png" draggable="false">
