--- a/stage_neolink.html
+++ b/stage_neolink.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; Stage Néolink /&#62; </h1>
+        <h1>Stage Néolink</h1>
         <div class="project_content_container">
             <img class="project_content_img" src="annexes/neolink_logo.png" draggable="false">
             <div class="project_content_text">
