--- a/tictactoe.html
+++ b/tictactoe.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="project_content">
-        <h1>&#60; TicTacToe /&#62; </h1>
+        <h1>TicTacToe</h1>
         <div class="project_content_container">
             <div class="smartphone_container">
                 <div class="smartphone">
